--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,6 +37,52 @@ ol, ul {
 	list-style: none;
 }
 
+.background-picture{
+	background-image: url('../../images/home-bg.jpg');
+	height: 100vh;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	filter: brightness(70%);
+	position: relative;
+  }
+
+.first-txt {
+	font-family: 'Oswald', sans-serif;;
+	position: absolute;
+	font-size: 3.5em;
+	margin-top: 35vh;
+	top: 5%;
+	left: 50px;
+	color: #fff;
+}
+
+.second-txt{
+	position: absolute;
+	top: 20%;
+	margin-top: 35vh;
+	text-align: center;
+	left: 50px;
+	color: #fff;
+}
+  
+.buttonnn {
+	background-color: #ffb31a;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	position: absolute;
+	margin-top: 70vh;
+	margin-left: 20%;
+	z-index: 999;
+	border-radius: 12px;
+}
+
 blockquote, q {
 	quotes: none;
 }
